src/SomeClass2MainCompOut2.txt
Error(s):
s.cpp:14:13: error: 'calcPiIsh' is a private member of 'SomeClass'
    myClass.calcPiIsh();
            ^
s.cpp:7:10: note: implicitly declared private here
    void calcPiIsh(){
         ^
1 error generated.